Added EnTT library for ECS support.

--- a/WindowsDesktop/Siv3D.vcxproj
+++ b/WindowsDesktop/Siv3D.vcxproj
@@ -11,6 +11,78 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\config\config.h" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\config\macro.h" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\config\version.h" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\container\dense_map.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\container\dense_set.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\container\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\algorithm.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\any.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\attribute.h" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\compressed_pair.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\enum.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\family.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\hashed_string.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\ident.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\iterator.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\memory.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\monostate.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\tuple.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\type_info.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\type_traits.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\core\utility.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\component.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\entity.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\group.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\handle.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\helper.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\mixin.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\observer.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\organizer.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\registry.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\runtime_view.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\snapshot.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\sparse_set.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\storage.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\entity\view.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\graph\adjacency_matrix.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\graph\dot.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\graph\flow.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\graph\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\locator\locator.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\adl_pointer.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\container.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\context.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\factory.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\meta.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\node.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\pointer.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\policy.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\range.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\resolve.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\template.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\type_traits.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\meta\utility.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\platform\android-ndk-r17.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\poly\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\poly\poly.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\process\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\process\process.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\process\scheduler.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\resource\cache.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\resource\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\resource\loader.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\resource\resource.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\signal\delegate.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\signal\dispatcher.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\signal\emitter.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\signal\fwd.hpp" />
+    <ClInclude Include="..\..\..\Documents\entt\src\entt\signal\sigh.hpp" />
     <ClInclude Include="..\Siv3D\include\HamFramework.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\2DShapes.hpp" />
@@ -38,6 +110,7 @@
     <ClInclude Include="..\Siv3D\include\Siv3D\detail\Disc.ipp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\detail\DynamicMesh.ipp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\detail\DynamicTexture.ipp" />
+    <ClInclude Include="..\Siv3D\include\Siv3D\detail\ECS.ipp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\detail\Font.ipp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\detail\Glyph.ipp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\detail\Graphics3D.ipp" />
@@ -68,6 +141,7 @@
     <ClInclude Include="..\Siv3D\include\Siv3D\DriveInfo.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\DriveType.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\DynamicMesh.hpp" />
+    <ClInclude Include="..\Siv3D\include\Siv3D\ECS.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\Emission2D.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\EngineOptions.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\Array.hpp" />
@@ -853,6 +927,7 @@
     <ClInclude Include="..\Siv3D\include\ThirdParty\DirectXMath\DirectXMath.h" />
     <ClInclude Include="..\Siv3D\include\ThirdParty\DirectXMath\DirectXPackedVector.h" />
     <ClInclude Include="..\Siv3D\include\ThirdParty\DirectXMath\sal.h" />
+    <ClInclude Include="..\Siv3D\include\ThirdParty\entt\entt.hpp" />
     <ClInclude Include="..\Siv3D\include\ThirdParty\EnumBitmask\EnumBitmask.hpp" />
     <ClInclude Include="..\Siv3D\include\ThirdParty\fmt\core.h" />
     <ClInclude Include="..\Siv3D\include\ThirdParty\fmt\format.h" />
