--- a/WindowsDesktop/Siv3D.vcxproj
+++ b/WindowsDesktop/Siv3D.vcxproj
@@ -142,6 +142,9 @@
     <ClInclude Include="..\Siv3D\include\Siv3D\DriveType.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\DynamicMesh.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\ECS.hpp" />
+    <ClInclude Include="..\Siv3D\include\Siv3D\ECS\BasicComponents.hpp" />
+    <ClInclude Include="..\Siv3D\include\Siv3D\ECS\BaseScene.hpp" />
+    <ClInclude Include="..\Siv3D\include\Siv3D\ECS\Entity.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\Emission2D.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\EngineOptions.hpp" />
     <ClInclude Include="..\Siv3D\include\Siv3D\Array.hpp" />
