--- a/WindowsDesktop/Siv3D.vcxproj.filters
+++ b/WindowsDesktop/Siv3D.vcxproj.filters
@@ -1777,6 +1777,9 @@
     <Filter Include="include\ThirdParty\entt\signal">
       <UniqueIdentifier>{81b319c3-aff3-4a2a-ae51-931b8317c814}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include\Siv3D\ECS">
+      <UniqueIdentifier>{1c1ebc60-d6c7-45f8-8d5e-0c9f6cc448fe}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Siv3D\include\Siv3D.hpp">
@@ -8105,6 +8108,15 @@
     </ClInclude>
     <ClInclude Include="..\Siv3D\include\Siv3D\detail\ECS.ipp">
       <Filter>include\Siv3D\detail</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Siv3D\include\Siv3D\ECS\Entity.hpp">
+      <Filter>include\Siv3D\ECS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Siv3D\include\Siv3D\ECS\BaseScene.hpp">
+      <Filter>include\Siv3D\ECS</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Siv3D\include\Siv3D\ECS\BasicComponents.hpp">
+      <Filter>include\Siv3D\ECS</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
